# whoheplayfor

./: .coveragerc  .deepsource.toml  .dockerignore  .editorconfig  .gitignore  .isort.cfg  Dockerfile  LICENSE  Procfile  README.md  app.py  docker-compose.ci.yml  docker-compose.yml  entrypoint.sh  env.ci  env.example  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main.yml
WhoHePlayFor/: settings.py  wsgi.py
flask/: 20160419.json  app.py
static/css/: style.css
templates/: base.html  footer.html  header.html  home.html  results.html  tv.html  whpf.html
utils/: find_faceless.py
whoheplayfor/: local_settings.py  settings.py  urls.py  wsgi.py
whpf/: apps.py  context_processors.py  forms.py  helpers.py  managers.py  models.py  schema.py  teams.py  tests.py  urls.py  views.py
whpf/fixtures/: startdata.json
whpf/management/commands/: startdata.py  (+8 more)
whpf/migrations/: 0001_initial.py  0002_auto_20160423_1745.py  0003_auto_20160423_1833.py  0004_auto_20160425_1804.py  0005_auto_20160615_1609.py  0006_player_being_updated.py  0007_auto_20170124_1440.py  0008_team_times_guessed.py  0009_auto_20170125_1652.py  0010_play_playsetting.py  0011_play_legacy.py  0012_auto_20190630_1820.py
whpf/templates/: base.html  faq.html  favicons.html  footer.html  header.html  home.html  results.html  scoreboard.html  scoreboard_aux.html  stats.html  stats_aux.html  stats_team.html  whpf.html
whpf/templatetags/: filters.py
whpf/tests/: conftest.py  test_apps.py  test_context_processors.py  test_helpers.py  test_management.py  test_views.py  utils.py
(+4 files in other folders)
