[project]
name = "whoheplayfor"
version = "0.1.0"
description = "Who he play for?"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django~=4.2",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.3",
    "requests~=2.32",
    "sentry-sdk>=2.19.2",
    "social-auth-app-django==5.4.2",
    "whitenoise~=6.8",
]

[dependency-groups]
dev = [
    "coverage>=7.6.9",
    "django-coverage-plugin>=3.1.0",
    "pytest-django>=4.9.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "B", "Q", "A", "S", "G", "DJ"]

[tool.ruff.lint.per-file-ignores]
"*/tests/*.py" = ["S"]
